--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 								</ul>
 							</div>
 							<div class="items">
-								<img src="/src/icons/diff_safe.png" alt="icon" class="diff_icon">
+								<img src="icons/diff_safe.png" alt="icon" class="diff_icon">
 								<div class="items_subheader items_subheader_2">Safety</div>
 								<div class="mobileitem">No accidents, safety program, PPE</div>
 								<ul class="items_list">
